fixing issues around copy recordings